# CombatScribe

./: .gitignore  Cargo.toml  README.md  bug-fix.md  build.rs
.github/workflows/: build.yml  release.yml
data/: consumables.toml  raids.toml
src/: cli.rs  config.rs  consumable_data.rs  export.rs  file_io.rs  formatter.rs  log_data.rs  log_parser.rs  main.rs  parser.rs  raid_data.rs  theme.rs  update.rs  viewer.rs
src/log_data/: event_log.rs  filtering.rs  mod.rs  timeline.rs  timeline_builder.rs  types.rs
src/log_parser/: combat.rs  damage.rs  events.rs  healing.rs  helpers.rs  mod.rs  post_process.rs  regex.rs
src/parser/: boss.rs  extraction.rs  mod.rs  session.rs  timestamp.rs
src/viewer/: charts.rs  components.rs  consumes.rs  death_log.rs  detail.rs  events.rs  loot.rs  meters.rs  mod.rs  timeline.rs
