[package]
name = "combat-scribe"
version = "0.8.0"
edition = "2021"
authors = ["daemonp"]
description = "WoW Vanilla 1.12.1 combat log parser and viewer with DPS/HPS analysis"
license = "BSD-2-Clause"
repository = "https://github.com/daemonp/CombatScribe"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "canvas"] }
rfd = "0.15"
regex = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = "0.4"
tokio = { version = "1", features = ["fs", "rt"] }
dirs = "6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Windows-specific: hide console window in release builds
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 2
lto = true
